globus-gridmap-eppn-callout (1.8-1+gt6.@distro@) @distro@; urgency=low

  * remove unused variable

 -- Globus Toolkit <support@globus.org>  Wed, 01 Jul 2015 16:55:30 -0400

globus-gridmap-eppn-callout (1.7-1+gt6.@distro@) @distro@; urgency=low

  * Fix dependency version
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Thu, 25 Sep 2014 08:29:37 -0400

globus-gridmap-eppn-callout (1.6-2+gt6.@distro@) @distro@; urgency=low

  * Don't bother trying to remove pc file

 -- Globus Toolkit <support@globus.org>  Mon, 25 August 2014 14:44:23 -0400

globus-gridmap-eppn-callout (1.6-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:28 -0400

globus-gridmap-eppn-callout (1.5-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-gridmap-eppn-callout (1.5-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:43 -0400

globus-gridmap-eppn-callout (1.5-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:40 -0400

globus-gridmap-eppn-callout (1.4-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:29 -0400

globus-gridmap-eppn-callout (1.3-2+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:55 -0400

globus-gridmap-eppn-callout (1.3-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:41 -0500

globus-gridmap-eppn-callout (1.2-1+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes
