@@ -1,3 +1,9 @@
+globus-gridmap-eppn-callout (1.9-1+gt6.@distro@) @distro@; urgency=low
+
+  * GT-373: add support for proxies to eppn callout
+
+ -- Globus Toolkit <support@globus.org>  Mon, 14 Dec 2015 16:24:10 -0600
+
 globus-gridmap-eppn-callout (1.8-1+gt6.@distro@) @distro@; urgency=low
 
   * remove unused variable
